@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf8" standalone="yes"?>
+<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <settings>
 	<setting id="ip" type="text" label="30100" default="127.0.0.1" />
 	<setting id="port" type="text" label="30101" default="8112" />
